--- a/css-exercises/flex/02-flex-header/style.css
+++ b/css-exercises/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -22,4 +25,16 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links > ul {
+  display: flex;
+  justify-content: space-around;
+  gap: 8px;
+}
+
+.right-links > ul {
+  display: flex;
+  justify-content: space-around;
+  gap: 8px;
 }
