--- a/css-exercises/flex/04-flex-information/style.css
+++ b/css-exercises/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -10,6 +10,9 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +26,17 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.image-and-text {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 200px;
+}
+
+.all-images-and-text {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
 }
